--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,19 @@
             </intent-filter>
         </activity>
         <activity android:name=".addedittask.AddEditTaskActivity"></activity>
+
+        <receiver android:name=".widget.AppWidgetProvider">
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/appwidget_provider_info">
+
+            </meta-data>
+
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+        </receiver>
     </application>
 
 </manifest>
